# BrainTraining

./: BrainTraining.pro  CMakeLists.txt  TODO  b_games.cpp  b_games.h  b_main.cpp  b_main.h  bdefines.h  bgames.cpp  bgames.h  bgamesettings.cpp  bgamesettings.h  binit.cpp  binit.h  bio.cpp  bio.h  bmain.cpp  bmain.h  bwidget.cpp  bwidget.h  res.qrc  res.rc
I/: bdefines.h  imain.h
math/: bmathgen.cpp  bmathgen.h  bmathmain.cpp  bmathmain.h  bmathutil.cpp  bmathutil.h  bmathwidget.cpp  bmathwidget.h
math/expr/: bME_gen.cpp  bME_gen.h  bME_main.cpp  bME_main.h  bME_widget.cpp  bME_widget.h
res/: default.json  qss.qss  res.qrc
util/: bU_io.cpp  bU_io.h  bU_io_init.cpp  bU_io_init.h  bU_math.cpp  bU_math.h
widgets/: bW_leaderBoard.cpp  bW_leaderBoard.h  bW_mainMenu.cpp  bW_mainMenu.h  bW_mainWindow.cpp  bW_mainWindow.h  bW_statistics.cpp  bgamebutton.cpp  bgamebutton.h  bleaderboard.cpp  bleaderboard.h  bmainmenu.cpp  bmainmenu.h  bsettingswidgets.cpp  bsettingswidgets.h  bstatistics.cpp  bstatistics.h
widgets/util/: bWU_gameButton.cpp  bWU_gameButton.h  bWU_settingsWidgets.cpp  bWU_settingsWidgets.h
